--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "sass-loader": "^8.0",
         "tailwindcss": "^3.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "aos": "^3.0.0-beta.6"
     }
 }
