--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@vercel/speed-insights": "^1.0.10",
         "aos": "^3.0.0-beta.6"
     }
 }
