--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "@tailwindcss/forms": "^0.5",
-        "@tailwindcss/typography": "^0.5",
-        "autoprefixer": "^10.4",
-        "daisyui": "^4.7.3",
-        "laravel-vite-plugin": "^1.0.0",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.3",
-        "sass-loader": "^8.0",
-        "tailwindcss": "^3.0",
-        "vite": "^5.0.0"
-    },
-    "dependencies": {
-        "@vercel/speed-insights": "^1.0.10",
-        "aos": "^3.0.0-beta.6"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5",
+    "@tailwindcss/typography": "^0.5",
+    "autoprefixer": "^10.4",
+    "daisyui": "^4.7.3",
+    "laravel-vite-plugin": "^1.0.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.3",
+    "sass-loader": "^8.0",
+    "tailwindcss": "^3.0",
+    "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "@vercel/speed-insights": "^1.0.10",
+    "aos": "^3.0.0-beta.6",
+    "vercel": "latest"
+  }
 }
